# cam_lidar_framework

./: .gitignore  .gitmodules  README.md  ros2_ouster_drivers.tar.xz  uncrustify.cfg
Docs/: Sensor_Setup.md  Using_External_Dataset_with_ROS2.md  Using_TensorRT.md  perception_node_MedianFilter.cpp  using_A9_dataset_with_ros.md  using_external_dataset_with_ros.md
Docs/Archive/: cam_function_timing.patch  median_filt_timing.patch  obj_tracker_utils.py  perception_node_MedianFilter.cpp
Metrics/: README.md  cpd2npy.py  images2video.py  preparing_data_for_evaluation.md  preprocessGT.py  re-number_frames.py  re_number_frames.py  sageGT2MOT.py  supervisely_video_ann2MOT.py  viz_npy.py  viztest.py
Metrics/2D/: README.md  preprocessGT.py  re_number_frames.py
Metrics/2D_HOTA/: README.md  hota_sub_metric_plot.py  preprocessGT.py  supervisely_video_ann2MOT.py
Metrics/2D_mAP/: README.md  coco_map_calc.py  filter_coco_detections.py  supervisely_video_ann2coco.py
Metrics/3D/: README.md  f1_score_3d.py
Metrics/3D_F1/: README.md
Metrics/Archive/: sageGT2MOT.py  superviselyPointcloudEpisode2MOT.py
cam2image/: CMakeLists.txt  README.md  package.xml
cam2image/launch/: camera_launch.py
cam2image/src/: cam_stream.cpp  policy_maps.hpp
cam_lidar_bringup/: CMakeLists.txt  package.xml
cam_lidar_bringup/configs/: 3d_demo_config.rviz  ouster_driver_config.yaml
cam_lidar_bringup/launch/: 2d_fusion_demo.launch.py  3d_fusion_demo.launch.py  fusion_demo.launch.py  lidar_camera_drivers_launch.py  ouster_driver_launch.py  transform_explorer.launch.py
camera/camera_det2d/: README.md  package.xml  setup.cfg  setup.py
camera/camera_det3d/: README.md  package.xml  setup.py
camera/camera_pipeline/: README.md  setup.cfg  setup.py
camera_det3d/: package.xml  setup.cfg  setup.py
camera_det3d/camera_det3d/: camera_det3d_node.py  l_shape.py
camera_det3d/launch/: cam_det3d_demo.launch.py
camera_det3d/scripts/: yolov8_exporter.py
camera_pipeline/: .gitignore  ExtraInfo.md  README.md  package.xml  setup.py
camera_pipeline/camera_pipeline/: camera_processing_node.py  camera_processing_node2.py  lidar_visualization_node.py  lidar_visualization_sync_node.py
data_tools/: CMakeLists.txt  README.md  package.xml
data_tools/data_tools/: bag_inspection_tool_node.py  roi_visualizer_node.py
data_tools/launch/: feature_extractor.launch.py  file2bag.launch.py
data_tools/scripts/: preprocessGT.py  supervisely2MOT.py  supervisely_dataset_folder_creator.py
data_tools/scripts/ml_stuff/: classsifier_comparison.py  inference.py  pipeline_example.py  train_svm.py
data_tools/scripts/plotting/: hota_sub_metric_plot.py
data_tools/scripts/sandbox/: camDet3d.py  camDetNode.py  fake_mono3ddet.ipynb  image2bev.py  image2bev_math.py  l_shape.py  mAP_calculator.py
data_tools/scripts/supervisely_scripts/: supervisely2MOT.py  supervisely_dataset_folder_creator.py
data_tools/src/: convert2jpg.cpp  convert2pcd.cpp  pcd2classifier_features.cpp  pcd2xyzi.cpp  synced_file2image_cloud_msgs.cpp  synced_image_cloud_2file.cpp
drivers/cam2image/: package.xml
fusion/fusion_2d/: README.md  package.xml  setup.cfg  setup.py
fusion/fusion_2d/fusion_2d/: detection2csv_node.py  fusion_2d_node.py  fusion_visualizer_node.py  sort.py  utils.py
fusion/fusion_3d/: package.xml  setup.cfg  setup.py
fusion/fusion_3d/fusion_3d/: fusion_3d_visualizer_node.py  sort_modified.py  utils.py
fusion_3d/: package.xml  setup.py
fusion_engine/: .gitignore  README.md  package.xml  setup.cfg  setup.py
fusion_module/: README.md  package.xml  setup.py
learned_lidar_detector/: DATASET.md  a9_dataset.py  a9_dataset_creator.py  a9_obb.yaml  lidar_2_bev.py  package.xml  psuedo_image_maker.py  rviz.rviz  setup.py  train_yolov8_obb.py
lesson_perception/: CMakeLists.txt
lidar/lidar_obj_classifier/: README.md  package.xml  setup.cfg  setup.py
lidar/lidar_obj_classifier/lidar_obj_classifier/: README.md  classifier_validation.py  lidar_obj_classifier.py
lidar/lidar_obj_classifier/lidar_obj_classifier/server/: obj_classifier_server.py  server_test_caller.py
lidar/lidar_obj_classifier/weights/: pca.joblib  scaler.joblib  svm.joblib
lidar/lidar_pipeline/: package.xml
lidar/lidar_pipeline/configs/: default_config.yaml  oct18_config.yaml  oct18_r1_config.yaml  r02_s04_cam2South_lidarSouth_config.yaml
lidar/lidar_pipeline/include/lidar_pipeline/: optics.hpp  point_cloud_utils.hpp
lidar/lidar_pipeline/launch/: processing_node.launch.py
lidar/lidar_pipeline/src/: lidar2cam_proj.cpp  perception_node.cpp
lidar/trad_lidar_detector/: CMakeLists.txt  README.md  package.xml
lidar/trad_lidar_detector/configs/: dec14_config.yaml  lidar_pipeline_config.yaml  may10_config.yaml
lidar/trad_lidar_detector/include/trad_lidar_detector/: l_fitting.hpp  lidar_processing.hpp
lidar/trad_lidar_detector/launch/: lidar_demo.launch.py  processing_node.launch.py
lidar/trad_lidar_detector/src/: l_fitting.cpp  lidar2cam_proj.cpp  lidar_processing.cpp  perception_node.cpp  transform_explorer_node.cpp
lidar_pipeline/: CMakeLists.txt  README.md  package.xml
lidar_pipeline/configs/: dec14_config.yaml  dec7_config.yaml  default_config.yaml  lidar_pipeline_config.yaml  may10_config.yaml  oct18_config.yaml  oct18_r1_config.yaml  r02_s03_cam1South_lidarSouth_config.yaml  r02_s04_cam1South_lidarSouth_config.yaml  r02_s04_cam2South_lidarSouth_config.yaml  rviz.rviz  transforms.yaml
lidar_pipeline/include/lidar_pipeline/: lidar_processing.hpp  optics.hpp  pcl_dbscan.hpp  perception_node.hpp  point_cloud_utils.hpp
lidar_pipeline/launch/: full_demo.launch.py  fusion_demo.launch.py  lidar_demo.launch.py  lidar_pipeline_launch.py  processing_and_transform_launch.py  processing_node.launch.py  system.launch.py  transform_explorer.launch.py
lidar_pipeline/src/: l_fitting.cpp  lidar2cam_proj.cpp  lidar_node.cpp  lidar_processing.cpp  perception_node.cpp  transform_explorer_node.cpp
obj_classifier/: README.md  setup.py
obj_tracker/: README.md  package.xml  requirements.txt  setup.py
pipeline_interfaces/: CMakeLists.txt  package.xml
(+110 files in other folders)
