<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion_2d</name>
  <version>0.0.0</version>
  <description>Fuses 2D image detections and projected 2D LiDAR detections into 1 track list.</description>
  <maintainer email="adrian-soch@github.com">adrian</maintainer>
  <license>MIT</license>

  <depend>python3-numpy</depend>
  <depend>rclpy</depend>
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
