<?xml version="1.0"?>
<package format="3">
  <name>lidar_pipeline</name>
  <version>0.0.1</version>
  <description>
     The lidar_pipeline package
  </description>
  <author email="sochania@mcmaster.ca">asochaniwsky</author>
  <maintainer email="sochania@mcmaster.ca">asochaniwsky</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>message_filters</depend>
  <depend>pipeline_interfaces</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
        <build_type>ament_cmake</build_type>
  </export>

</package>
